[package]
name = "learning-bevy"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1", features = ["jpeg"]}
bevy_rapier3d = { version = "0.16.2", features = [ "simd-stable", "debug-render", "serde-serialize" ] }
rand = "0.8.5"
smooth-bevy-cameras = "0.5.0"
serde = "1.0.147"
serde_json = "1.0.87"
ron = "0.8"
bincode = "1.3.3"
tokio = {version="1.21.2", features=["rt"]}
async-recursion = "1.0.0"
crossbeam-channel = "0.5.6"
bevy-hikari = {version="0.2.21", optional=true}
bevy_atmosphere = "0.4.1"

[features]
dyn = ["bevy/dynamic"]
check-local-cache = []
use-ray-tracing = ["dep:bevy-hikari"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
